--- a/Demo 2/Demo 2 - TimeProvider.csproj
+++ b/Demo 2/Demo 2 - TimeProvider.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="8.0.0-rc.1.23453.1" />
+  </ItemGroup>
+
 </Project>
