--- a/Demo 6/Demo 6 - C# 12.csproj
+++ b/Demo 6/Demo 6 - C# 12.csproj
@@ -9,6 +9,7 @@
 
 		<LangVersion>preview</LangVersion>
 		<Features>InterceptorsPreview</Features>
+		<InterceptorsPreviewNamespaces>$(InterceptorsPreviewNamespaces);Interceptors</InterceptorsPreviewNamespaces>
 	</PropertyGroup>
 
 </Project>
