--- a/Demo 2/Demo 2 - TimeProvider.csproj
+++ b/Demo 2/Demo 2 - TimeProvider.csproj
@@ -9,7 +9,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="8.0.0-rc.1.23453.1" />
+    <PackageReference Include="Microsoft.Extensions.TimeProvider.Testing" Version="8.2.0" />
   </ItemGroup>
 
 </Project>
